tests/rosetta/out/Fortran/ackermann-function-2.error
gfortran: exit status 1
/tmp/ackermann-function-2.f90:10:3:

   10 |   main()
      |   1
Error: Unclassifiable statement at (1)
